--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ h1, h2 {
 /* Small devices <768px */
 @media screen and (max-width: 768px) {
   .container {
-    max-width: 720px;
-    margin: 0 5px;
+    max-width: 95%;
+    margin: 0 auto;
   }
 
   .col-sm-2 {
